# sparsdr

./: CHANGELOG.md  README.md
gr-sparsdr/apps/: CMakeLists.txt  sparsdr_bluetooth_sniffer.cc  sparsdr_real_time_receive.cc  sparsdr_receive.cc  sparsdr_receive_sniffer.cc  sparsdr_receive_sniffer_time_logging.cc  sparsdr_reconstruct_graph.py
gr-sparsdr/grc/: CMakeLists.txt  generate.rb  sparsdr_average_waterfall.xml  sparsdr_combined_pluto_receiver.block.yml  sparsdr_combined_pluto_receiver.xml  sparsdr_combined_usrp_receiver.block.yml  sparsdr_combined_usrp_receiver.xml  sparsdr_compressing_pluto_source.block.yml  sparsdr_compressing_pluto_source.xml  sparsdr_compressing_plutosdr_source.xml  sparsdr_compressing_usrp_source.block.yml  sparsdr_compressing_usrp_source.xml  sparsdr_iio_device_source.xml  sparsdr_reconstruct.block.yml  sparsdr_reconstruct.xml  sparsdr_reconstruct_from_file.xml  sparsdr_sample_distributor.xml  sparsdr_simple_combined_pluto_receiver.block.yml  sparsdr_simple_combined_pluto_receiver.xml  sparsdr_simple_combined_usrp_receiver.block.yml  sparsdr_swap_16.xml  sparsdr_tagged_wavfile_sink.xml
reconstruct/: .gitignore  Cargo.toml  README.md
reconstruct/.cargo/: config.toml
reconstruct/app/: main.rs  setup.rs
reconstruct/benches/: macro.rs  micro.rs
reconstruct/config_files/: config_sample.toml  generate_bands.rb  usrp_acars_files.toml  usrp_to_udp.toml
reconstruct/examples/: analyze_active_bins.rs  average_averages.rs  averages.rs  ble_bins.rs  bluetooth_active_bins.rs  bluetooth_heuristic.rs  exponent_test.rs  fft_test.rs  heuristic_filter.rs  matlab_to_iqz.rs  print.rs  read_doubles.rs  read_doubles_complex.rs  sort.rs  sparsdr_to_active_bins.rs
reconstruct/reconstruct_cpp_test/: CMakeLists.txt  main.cpp
reconstruct/sparsdr_bin_mask/: Cargo.toml
reconstruct/sparsdr_bin_mask/benches/: micro.rs
reconstruct/sparsdr_bin_mask/src/: lib.rs
reconstruct/sparsdr_reconstruct/: Cargo.toml
reconstruct/sparsdr_reconstruct/benches/: micro.rs
reconstruct/sparsdr_reconstruct/examples/: 64_to_32.rs  analyze_timestamps.rs  count_ble_packets.rs
reconstruct/sparsdr_reconstruct/src/: band_decompress.rs  c_interface.rs  component_setup.rs  decompress.rs  iter.rs  iter_ext.rs  lib.rs  main.rs  push_reconstruct.rs  setup.rs  window.rs
reconstruct/sparsdr_reconstruct/src/stages/: band_receive.rs  fft_and_output.rs  input.rs  mod.rs
reconstruct/sparsdr_reconstruct/src/steps/: buffered_pipe.rs  mod.rs  overflow.rs  overlap.rs  phase_correct.rs  shift.rs
reconstruct/sparsdr_reconstruct/src/window_filter/: correlation_template.rs
reconstruct/sparsdr_reconstruct/test-data/500p5/: STFT_f_testvectors_0fc  STFT_mod_testvectors_0fc
reconstruct/sparsdr_reconstruct/test-data/all-2048/: STFT_fp_testvectors_0fc  dec_testvectors_0fc  l1_testvectors_0fc
reconstruct/sparsdr_reconstruct/test-data/bin-frequency-offset/: STFT_fp_testvectors_0fc  STFT_testvectors_0fc  x_istft_f_testvectors_0fc-32
reconstruct/sparsdr_reconstruct/test-data/correlation_template/: pluto_sparsdrv1_x300_tx_ramcap.iqz
reconstruct/sparsdr_reconstruct/test-data/correlation_template_simple/: corrTemplateandCenteredBinIdx.mat
reconstruct/sparsdr_reconstruct/tests/: correlation_template.rs  correlation_template_simple.rs  decompress_basic.rs  initial_gap.rs
reconstruct/sparsdr_reconstruct_c/: Cargo.toml  build.rs
reconstruct/sparsdr_reconstruct_c/src/: lib.rs
reconstruct/sparsdr_reconstruct_config/: Cargo.toml
reconstruct/sparsdr_reconstruct_config/examples/: command_line.rs  serialize.rs
reconstruct/sparsdr_reconstruct_config/src/: cli.rs  custom_de.rs  deserialize_test.rs  lib.rs
reconstruct/sparsdr_sample_parser/: Cargo.toml  V2_parser.c  c_parser
reconstruct/sparsdr_sample_parser/examples/: bin_max.rs  check_errors.rs  print_hex_samples.rs
reconstruct/sparsdr_sample_parser/src/: lib.rs  print_samples.rs  v1.rs  v2.rs
reconstruct/sparsdr_sample_parser/tests/: basic_valid.rs  v2_files.rs
reconstruct/src/: band_decompress.rs  blocking.rs  channel_ext.rs  component_setup.rs  cursor.rs  decompress.rs  format.rs  iter_ext.rs  lib.rs  main.rs  setup.rs  window.rs  window_filter.rs
reconstruct/src/args/: about.txt  band_args.rs  mod.rs
reconstruct/src/bins/: choice.rs  mod.rs
reconstruct/src/dynamic/: mod.rs
reconstruct/src/input/: iqzip.rs  matlab.rs  mod.rs  n210.rs  overflow.rs
reconstruct/src/input/format/: mod.rs  n210.rs  pluto.rs
reconstruct/src/output/: mod.rs  stdio.rs  udp.rs
reconstruct/src/stages/: band_receive.rs  fft_and_output.rs  input.rs  mod.rs
reconstruct/src/steps/: buffered_pipe.rs  filter_bins.rs  frequency_correct.rs  mod.rs  overflow.rs  overlap.rs  phase_correct.rs  shift.rs  writer.rs
reconstruct/test-data/500p5/: STFT_fp_testvectors_0fc  STFT_testvectors_0fc  freq_off_istft_testvectors_0fc  phase_off_testvectors_0fc  x_istft_f_testvectors_0fc  x_istft_f_testvectors_0fc-32  x_istft_testvectors_0fc  x_testvectors_0fc
reconstruct/test-data/all-2048/: README.md  STFT1_testvectors_0fc  anal_win_testvectors_0fc  compressed.iqz  x_istft_f_testvectors_0fc  x_istft_f_testvectors_0fc-32  x_testvectors_0fc
reconstruct/test-data/bin-frequency-offset/: STFT_fp_testvectors_0fc  STFT_mod_testvectors_0fc  anal_win_testvectors_0fc  x_istft_f_testvectors_0fc  x_istft_f_testvectors_0fc-32  x_istft_testvectors_0fc  x_testvectors_0fc
reconstruct/test-data/correlation_template/: bin_values_and_template.mat
reconstruct/test-data/correlation_template_simple/: stftWindowsCentered.mat
reconstruct/test-data/iqzip/: ble-advertising-short.iqz
reconstruct/test-data/non-bin-frequency-offset/: STFT_f_testvectors_0fc  STFT_testvectors_0fc  l1_testvectors_0fc  x_istft_f_testvectors_0fc
reconstruct/test-data/random-offset/: .gitignore  STFT_fp_testvectors_0fc  STFT_mod_testvectors_0fc  STFT_testvectors_0fc  freq_off_istft_testvectors_0fc  x_istft_f_testvectors_0fc  x_istft_f_testvectors_0fc-32
reconstruct/tests/: correlation_template.rs  correlation_template_simple.rs  decompress_basic.rs
reconstruct/tests/test_vectors/: mod.rs  uncompressed.rs
(+224 files in other folders)
