#
# Copyright 2022 The Regents of the University of California
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[package]
name = "sparsdr_reconstruct_c"
version = "0.1.0"
edition = "2021"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
description = "A C/C++ interface to sparsdr_reconstruct"
build = "build.rs"

[lib]
name = "sparsdr_reconstruct"
crate-type = ["cdylib"]

[dependencies]

[dependencies.num-complex]
version = "0.3.0"
default-features = false

[dependencies.sparsdr_reconstruct]
path = "../sparsdr_reconstruct"
[dependencies.sparsdr_sample_parser]
path = "../sparsdr_sample_parser"


[build-dependencies]
cbindgen = "0.21.0"
