[package]
name = "sparsdr_reconstruct_config"
version = "0.1.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.7"
serde = { version = "1.0.118", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }
clap = "2.33.0"

[dev-dependencies]
serde_json = "1.0.60"
